[gd_scene load_steps=9 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/player.png" type="Texture" id=2]
[ext_resource path="res://player/light.png" type="Texture" id=3]
[ext_resource path="res://player/color-gradient.tres" type="Texture" id=4]
[ext_resource path="res://audio/die.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 0.1
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 90.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 40.0
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 6.86
radial_accel = 3.43
angle = 720.0
angle_random = 1.0
scale_random = 0.1
color_ramp = ExtResource( 4 )

[node name="player" type="KinematicBody2D" groups=["player"]]
collision_mask = 2
script = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="area" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 6

[node name="collision2" type="CollisionShape2D" parent="area"]
shape = SubResource( 1 )

[node name="floor_raycast" type="Node2D" parent="."]

[node name="floor" type="RayCast2D" parent="floor_raycast"]
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 2

[node name="floor2" type="RayCast2D" parent="floor_raycast"]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 2

[node name="floor3" type="RayCast2D" parent="floor_raycast"]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 2

[node name="left" type="Node2D" parent="."]
rotation = 1.5708

[node name="floor" type="RayCast2D" parent="left"]
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 2

[node name="floor2" type="RayCast2D" parent="left"]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 2

[node name="floor3" type="RayCast2D" parent="left"]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 2

[node name="right" type="Node2D" parent="."]
rotation = -1.5708

[node name="floor" type="RayCast2D" parent="right"]
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 2

[node name="floor2" type="RayCast2D" parent="right"]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 2

[node name="floor3" type="RayCast2D" parent="right"]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 2

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0.803922, 0.698039, 1 )
light_mask = 0
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
light_mask = 0
amount = 10
lifetime = 0.6
randomness = 0.1
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
modulate = Color( 1, 1, 1, 0.627451 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
texture_scale = 0.5
color = Color( 1, 0.803922, 0.698039, 1 )
energy = 0.7
range_layer_min = -10
shadow_enabled = true
shadow_gradient_length = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -30.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -7.0
pitch_scale = 2.0

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
